Fixed price-impact field overflowing on company cards

--- a/webapp/bot/static/css/chat.css
+++ b/webapp/bot/static/css/chat.css
@@ -59,6 +59,8 @@
 
 .price-impact {
     text-align: right;
+    white-space: nowrap;
+    padding-left: 150px;
 }
 
 .card {
